samples/_failures_safe/1761248277_4be58e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90829959.c: In function ‘main’:
./samples/SAFE/__tmp_90829959.c:130:13: error: expected declaration or statement at end of input
  130 |             }
      |             ^
./samples/SAFE/__tmp_90829959.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90829959.c:130:13: error: expected declaration or statement at end of input
